--- a/config/crd/bases/inference.networking.x-k8s.io_inferencemodelrewrites.yaml
+++ b/config/crd/bases/inference.networking.x-k8s.io_inferencemodelrewrites.yaml
@@ -152,6 +152,12 @@ spec:
               InferenceModelRewrite.
             properties:
               conditions:
+                default:
+                - lastTransitionTime: "1970-01-01T00:00:00Z"
+                  message: Waiting for controller
+                  reason: Pending
+                  status: Unknown
+                  type: Accepted
                 description: |-
                   Conditions track the state of the InferenceModelRewrite.
 
