--- a/config/crd/bases/inference.networking.x-k8s.io_inferencemodelrewrites.yaml
+++ b/config/crd/bases/inference.networking.x-k8s.io_inferencemodelrewrites.yaml
@@ -110,7 +110,7 @@ spec:
                         - model
                         type: object
                       type: array
-                    split:
+                    targets:
                       items:
                         description: TargetModel defines a weighted model destination
                           for traffic distribution.
