feature: (helm) support custom volumes and volumeMounts for epp (#1945)
* (helm) support custom volumes and volumeMounts for epp

Signed-off-by: Hang Yin <luying.yh@alibaba-inc.com>

* fix for comments

Signed-off-by: Hang Yin <luying.yh@alibaba-inc.com>

---------

Signed-off-by: Hang Yin <luying.yh@alibaba-inc.com>

--- a/config/charts/inferencepool/templates/epp-deployment.yaml
+++ b/config/charts/inferencepool/templates/epp-deployment.yaml
@@ -182,8 +182,14 @@ spec:
         volumeMounts:
         - name: plugins-config-volume
           mountPath: "/config"
+        {{- if .Values.inferenceExtension.volumeMounts }}
+        {{- toYaml .Values.inferenceExtension.volumeMounts | nindent 8 }}
+        {{- end }}
       {{- include "gateway-api-inference-extension.latencyPredictor.containers" . | nindent 6 }}
       volumes:
+      {{- if .Values.inferenceExtension.volumes }}
+      {{- toYaml .Values.inferenceExtension.volumes | nindent 6 }}
+      {{- end }}
       {{- if .Values.inferenceExtension.sidecar.volumes }}
       {{- tpl (toYaml .Values.inferenceExtension.sidecar.volumes) $ | nindent 6 }}
       {{- end }}
