Extend textual configuration support with the Datalayer's configuration (#1914)
* Added datalayer config to text config definition

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

* Added datalayer config to EPP config

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

* Load datalayer config from text to EPP config

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

* Updated tests for datalayer config

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

* Updated configuration documentation

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

* Refactored configuration DataLayer Extractor elements

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

* Test data updates due to configuration refactoring

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

* Documentation updates due to comments from the review

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

* Removed V2 from errors and descriptions WRT the Datalayer

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

* Ensure there is no Datalayer config if it isn't enabled

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

* Debug build failure

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

* Removed debugging statement

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

* Add verbose to failing command

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

* Remove verbose from formerly failing command

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

* Update from review comment

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

---------

Signed-off-by: Shmuel Kallner <kallner@il.ibm.com>

--- a/test/testdata/configloader_1_test.yaml
+++ b/test/testdata/configloader_1_test.yaml
@@ -12,6 +12,8 @@ plugins:
     blockSize: 32
 - name: testPicker
   type: test-picker
+- type: test-source
+- type: test-extractor
 schedulingProfiles:
 - name: default
   plugins:
@@ -19,6 +21,11 @@ schedulingProfiles:
   - pluginRef: test-two
     weight: 50
   - pluginRef: testPicker
+data:
+  sources:
+  - pluginRef: test-source
+    extractors:
+    - pluginRef: test-extractor
 featureGates:
 - dataLayer
 saturationDetector:
