add preparedata plugin to latency based scorer to consume prefix states (#2005)
* add preparedata plugin to latency based scorer to consume prefix states

* remove unused method

* fix ineffectual assignment to prefixCacheScore

* remove two profiles from helm and router specific handler

* simplfy code preparedata

* fix preparedata hook bug

* fix scorer test

* create rand number once in scorer when instantiated

--- a/config/charts/inferencepool/templates/epp-config.yaml
+++ b/config/charts/inferencepool/templates/epp-config.yaml
@@ -15,7 +15,7 @@ data:
     - type: predicted-latency-scorer
       parameters:
         {{- with .Values.inferenceExtension.latencyPredictor.sloAwareRouting | default dict }}
-        samplingMean: {{ .samplingMean | default 100.0 }}
+        samplingMean: {{ .samplingMean | default 1000.0 }}
         maxSampledTokens: {{ .maxSampledTokens | default 20 }}
         sloBufferFactor: {{ .sloBufferFactor | default 1.0 }}
         negHeadroomTTFTWeight: {{ .negHeadroomTTFTWeight | default 0.8 }}
@@ -32,23 +32,14 @@ data:
         affinityGateTauGlobal: {{ .affinityGateTauGlobal | default 0.99 }}
         selectionMode: {{ .selectionMode | default "linear" | quote }}
         {{- end }}
-    - type: predicted-latency-profile-handler
     {{- end }}
     schedulingProfiles:
     {{- if .Values.inferenceExtension.latencyPredictor.enabled }}
-    - name: predicted-latency-prefix
-      plugins:
-      - pluginRef: prefix-cache-scorer
-    - name: predicted-latency-no-routing
-      plugins:
-      - pluginRef: prefix-cache-scorer
-      - pluginRef: predicted-latency-scorer
-        weight: 0
-      - pluginRef: queue-scorer
-      - pluginRef: kv-cache-utilization-scorer
-    - name: predicted-latency-routing
+    - name: default
       plugins:
       - pluginRef: predicted-latency-scorer
+    featureGates:
+      - prepareDataPlugins
     {{- else }}
     - name: default
       plugins:
