--- a/config/charts/inferencepool/templates/epp-deployment.yaml
+++ b/config/charts/inferencepool/templates/epp-deployment.yaml
@@ -106,7 +106,7 @@ spec:
         {{- else }}
         - --tracing=false
         {{- end }}
-        {{- if not .Values.inferenceExtension.monitoring.prometheus.enabled }}
+        {{- if not .Values.inferenceExtension.monitoring.prometheus.auth.enabled }}
         - --metrics-endpoint-auth=false
         {{- end }}
         ports:
