feat: make epp-standalone be its own chart (#2122)
* inferencepool workable

* inferncepool still work

* fixed part

* epp standalone also works

* fixed format

* fixed format

* fixed format

* fixed ci cd

* fixed comments

* fixed format

Signed-off-by: Xiyue Yu <xiyue@google.com>

* fixed httproute timeouts

Signed-off-by: Xiyue Yu <xiyue@google.com>

---------

Signed-off-by: Xiyue Yu <xiyue@google.com>

--- a/config/charts/epp-standalone/Chart.yaml
+++ b/config/charts/epp-standalone/Chart.yaml
@@ -1,12 +1,13 @@
 apiVersion: v2
-name: inferencepool
-description: A Helm chart for InferencePool
+name: epp-standalone
+description: A Helm chart for Endpoint Picker
 
 type: application
 
 version: 0.0.0
 
 appVersion: "0.0.0"
+
 dependencies:
   - name: inference-extension
     version: 0.0.0
