--- a/config/charts/inferencepool/templates/httproute.yaml
+++ b/config/charts/inferencepool/templates/httproute.yaml
@@ -24,6 +24,8 @@ spec:
           name: X-Gateway-Base-Model-Name
           value: {{ .Values.experimentalHttpRoute.baseModel }}
       {{- end }}
+    {{- if ne (lower .Values.provider.name) "gke" }}
     timeouts:
       request: 300s
+    {{- end }}
 {{- end }}
