--- a/config/crd/bases/inference.networking.k8s.io_inferencepools.yaml
+++ b/config/crd/bases/inference.networking.k8s.io_inferencepools.yaml
@@ -43,6 +43,7 @@ spec:
             description: Spec defines the desired state of the InferencePool.
             properties:
               appProtocol:
+                default: http
                 description: |-
                   AppProtocol describes the application protocol for all the target ports.
 
