feat: added guide for epp standalone with inferencepool dependency (#2260)
* added guide for epp standalone with inferencepool dependency

* fixed format and added verification

* fixed guide

* fixed ci cd

* fixed comments

* updated values

* fixed comments

* change to create inferencepool as true

* fixed nits and tried to add tabs

* tried tab works or not

* see tab works or not

Signed-off-by: Xiyue Yu <xiyue@google.com>

* check whether it works or not

* tested tab effect

* see tab effect

---------

Signed-off-by: Xiyue Yu <xiyue@google.com>

--- a/config/charts/inference-extension/templates/_deployment.yaml
+++ b/config/charts/inference-extension/templates/_deployment.yaml
@@ -75,13 +75,13 @@ spec:
           args:
           {{- /* 1. Determine Model Server Type Logic */ -}}
           {{- $modelServerType := "vllm" }}
-          {{- if and .Values.inferenceExtension.endpointsServer .Values.inferenceExtension.endpointsServer.standalone -}}
+          {{- if and .Values.inferenceExtension.endpointsServer (not .Values.inferenceExtension.endpointsServer.createInferencePool) -}}
             {{- $modelServerType = .Values.inferenceExtension.endpointsServer.modelServerType | default "vllm" }}
           {{- else }}
             {{- $modelServerType = .Values.inferencePool.modelServerType | default "vllm" }}
           {{- end }}
           {{- /* 2. Mode Specific Flags */ -}}
-          {{- if and .Values.inferenceExtension.endpointsServer .Values.inferenceExtension.endpointsServer.standalone }}
+          {{- if and .Values.inferenceExtension.endpointsServer (not .Values.inferenceExtension.endpointsServer.createInferencePool) }}
               - --endpoint-selector
               - {{ .Values.inferenceExtension.endpointsServer.endpointSelector | quote }}
               - --endpoint-target-ports
