Build and distribute latencyprediction images (#2287)
* [Build] latencyprediction image makefile builds + cloudbuild.yaml changes

Signed-off-by: greg pereira <grpereir@redhat.com>

* comments cleanup, manifests QOL, consildate build steps

Signed-off-by: greg pereira <grpereir@redhat.com>

---------

Signed-off-by: greg pereira <grpereir@redhat.com>

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -38,6 +38,16 @@ steps:
     - GIT_TAG=$_GIT_TAG
     - EXTRA_TAG=$_PULL_BASE_REF
     - DOCKER_BUILDX_CMD=/buildx-entrypoint
+  - name: gcr.io/k8s-staging-test-infra/gcb-docker-gcloud:v20240718-5ef92b5c36
+    entrypoint: make
+    args:
+      - latency-training-image-push
+      - latency-prediction-image-push
+      - latency-prediction-test-image-push
+    env:
+    - GIT_TAG=$_GIT_TAG
+    - EXTRA_TAG=$_PULL_BASE_REF
+    - DOCKER_BUILDX_CMD=/buildx-entrypoint
 substitutions:
   # _GIT_TAG will be filled with a git-based tag for the image, of the form vYYYYMMDD-hash, and
   # can be used as a substitution
