--- a/conformance/resources/base.yaml
+++ b/conformance/resources/base.yaml
@@ -200,7 +200,7 @@ spec:
       terminationGracePeriodSeconds: 130
       containers:
       - name: epp
-        image: us-central1-docker.pkg.dev/k8s-staging-images/gateway-api-inference-extension/epp:v20251119-2aaf2a6
+        image: registry.k8s.io/gateway-api-inference-extension/epp:v1.3.1
         imagePullPolicy: Always
         args:
         - --pool-name
@@ -298,7 +298,7 @@ spec:
       terminationGracePeriodSeconds: 130
       containers:
       - name: epp
-        image: us-central1-docker.pkg.dev/k8s-staging-images/gateway-api-inference-extension/epp:v20251119-2aaf2a6
+        image: registry.k8s.io/gateway-api-inference-extension/epp:v1.3.1
         imagePullPolicy: Always
         args:
         - --pool-name
@@ -507,7 +507,7 @@ spec:
       terminationGracePeriodSeconds: 130
       containers:
       - name: epp
-        image: us-central1-docker.pkg.dev/k8s-staging-images/gateway-api-inference-extension/epp:v20251119-2aaf2a6
+        image: registry.k8s.io/gateway-api-inference-extension/epp:v1.3.1 
         imagePullPolicy: Always
         args:
         - --pool-name
@@ -574,7 +574,7 @@ metadata:
   namespace: inference-conformance-app-backend
 rules:
 - apiGroups: ["inference.networking.x-k8s.io"]
-  resources: ["inferenceobjectives", "inferencepools"]
+  resources: ["inferenceobjectives", "inferencemodelrewrites", "inferencepools"]
   verbs: ["get", "list", "watch"]
 - apiGroups: ["inference.networking.k8s.io"]
   resources: ["inferencepools"]
