Model replacement to Qwen3-32B (#2189)
* Model replacement to Qwen3-32B

Signed-off-by: Sathvik <Sathvik.S@ibm.com>

* Update config/manifests/sglang/gpu-deployment.yaml

add back sglang engine type label

* Update config/manifests/vllm/cpu-deployment.yaml

add back vllm engine type label

* Update config/manifests/vllm/gpu-deployment.yaml

add back vllm engine type label

---------

Signed-off-by: Sathvik <Sathvik.S@ibm.com>
Co-authored-by: Abdullah Gharaibeh <40361897+ahg-g@users.noreply.github.com>

--- a/config/manifests/sglang/gpu-deployment.yaml
+++ b/config/manifests/sglang/gpu-deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sgl-llama3-8b-instruct
+  name: sgl-qwen3-32b-instruct
   labels:
-    app: sgl-llama3-8b-instruct
+    app: sgl-qwen3-32b-instruct
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: sgl-llama3-8b-instruct
+      app: sgl-qwen3-32b-instruct
   template:
     metadata:
       labels:
-        app: sgl-llama3-8b-instruct
+        app: sgl-qwen3-32b-instruct
         inference.networking.k8s.io/engine-type: sglang
     spec:
       containers:
@@ -20,7 +20,7 @@ spec:
           image: lmsysorg/sglang:latest
           command: ["python3", "-m", "sglang.launch_server"]
           args:
-            - "--model-path=meta-llama/Llama-3.1-8B-Instruct"
+            - "--model-path=Qwen/Qwen3-32B"
             - "--host=0.0.0.0"
             - "--port=8000"
             - "--dtype=bfloat16"
